16_Workflow-Orchestration-with-Apache-Airflow/Praktikum/Eksplorasi/logs/dag_id=fruits_dag/run_id=scheduled__2023-03-11T000000+0000/task_id=create_fruits_table/attempt=3.log
[2024-04-09T17:25:31.608+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-09T17:25:32.031+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-11T00:00:00+00:00 [queued]>
[2024-04-09T17:25:32.152+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-11T00:00:00+00:00 [queued]>
[2024-04-09T17:25:32.176+0000] {taskinstance.py:2303} INFO - Starting attempt 3 of 4
[2024-04-09T17:25:32.419+0000] {taskinstance.py:2327} INFO - Executing <Task(PostgresOperator): create_fruits_table> on 2023-03-11 00:00:00+00:00
[2024-04-09T17:25:32.609+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=803) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-04-09T17:25:32.633+0000] {standard_task_runner.py:63} INFO - Started process 841 to run task
[2024-04-09T17:25:32.613+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'fruits_dag', 'create_fruits_table', 'scheduled__2023-03-11T00:00:00+00:00', '--job-id', '36', '--raw', '--subdir', 'DAGS_FOLDER/fruit_table_dag.py', '--cfg-path', '/tmp/tmp8d2lm9zo']
[2024-04-09T17:25:32.636+0000] {standard_task_runner.py:91} INFO - Job 36: Subtask create_fruits_table
[2024-04-09T17:25:47.479+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 36 for task create_fruits_table ((psycopg2.OperationalError) could not translate host name "postgres" to address: Temporary failure in name resolution

(Background on this error at: https://sqlalche.me/e/14/e3q8); 841)
[2024-04-09T17:25:49.295+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-09T17:25:49.336+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-09T17:25:49.386+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-09T17:25:49.392+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
[2024-04-09T19:28:01.668+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-09T19:28:01.881+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-11T00:00:00+00:00 [queued]>
[2024-04-09T19:28:02.080+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-11T00:00:00+00:00 [queued]>
[2024-04-09T19:28:02.093+0000] {taskinstance.py:2303} INFO - Starting attempt 3 of 4
[2024-04-09T19:28:03.013+0000] {taskinstance.py:2327} INFO - Executing <Task(PostgresOperator): create_fruits_table> on 2023-03-11 00:00:00+00:00
[2024-04-09T19:28:03.225+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'fruits_dag', 'create_fruits_table', 'scheduled__2023-03-11T00:00:00+00:00', '--job-id', '390', '--raw', '--subdir', 'DAGS_FOLDER/fruit_table_dag.py', '--cfg-path', '/tmp/tmp2kgelbh5']
[2024-04-09T19:28:03.236+0000] {standard_task_runner.py:91} INFO - Job 390: Subtask create_fruits_table
[2024-04-09T19:28:03.212+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=3360) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-04-09T19:28:03.306+0000] {standard_task_runner.py:63} INFO - Started process 3394 to run task
[2024-04-09T19:28:04.499+0000] {task_command.py:426} INFO - Running <TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-11T00:00:00+00:00 [running]> on host fd38698150f5
[2024-04-09T19:28:05.389+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='fruits_dag' AIRFLOW_CTX_TASK_ID='create_fruits_table' AIRFLOW_CTX_EXECUTION_DATE='2023-03-11T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-03-11T00:00:00+00:00'
[2024-04-09T19:28:05.426+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-04-09T19:28:05.454+0000] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS fruits (
            id SERIAL PRIMARY KEY,
            name VARCHAR(50) NOT NULL,
            calories DECIMAL NOT NULL,
            fat DECIMAL NOT NULL,
            sugar DECIMAL NOT NULL,
            carbohydrates DECIMAL NOT NULL,
            protein DECIMAL NOT NULL,
        );

        -- Perbaikan: Menambahkan sequence fruits_id_seq
        CREATE SEQUENCE IF NOT EXISTS fruits_id_seq
            START WITH 1
            INCREMENT BY 1
            NO MINVALUE
            NO MAXVALUE
            CACHE 1;
    
[2024-04-09T19:28:05.580+0000] {base.py:84} INFO - Using connection ID 'eksplorasi_postgres' for task execution.
[2024-04-09T19:28:05.665+0000] {base.py:84} INFO - Using connection ID 'eksplorasi_postgres' for task execution.
[2024-04-09T19:28:05.759+0000] {sql.py:457} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS fruits (
            id SERIAL PRIMARY KEY,
            name VARCHAR(50) NOT NULL,
            calories DECIMAL NOT NULL,
            fat DECIMAL NOT NULL,
            sugar DECIMAL NOT NULL,
            carbohydrates DECIMAL NOT NULL,
            protein DECIMAL NOT NULL,
        );

        -- Perbaikan: Menambahkan sequence fruits_id_seq
        CREATE SEQUENCE IF NOT EXISTS fruits_id_seq
            START WITH 1
            INCREMENT BY 1
            NO MINVALUE
            NO MAXVALUE
            CACHE 1;
    , parameters: None
[2024-04-09T19:28:05.831+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-04-09T19:28:05.844+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 10:         );
                 ^

[2024-04-09T19:28:05.918+0000] {taskinstance.py:1205} INFO - Marking task as UP_FOR_RETRY. dag_id=fruits_dag, task_id=create_fruits_table, execution_date=20230311T000000, start_date=20240409T192801, end_date=20240409T192805
[2024-04-09T19:28:06.008+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 390 for task create_fruits_table (syntax error at or near ")"
LINE 10:         );
                 ^
; 3394)
[2024-04-09T19:28:06.206+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-09T19:28:06.863+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-09T19:28:07.151+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-09T19:28:07.175+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
